--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8080
 
+spring.datasource.url=jdbc:postgresql://localhost:5433/timeline
+spring.datasource.username=timelineuser
+spring.datasource.password=12345678
+
+spring.liquibase.change-log=classpath:db-changelog.yaml
+spring.test.database.replace=none
