--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>ru.poezdizm</groupId>
 	<artifactId>timeline-tracker</artifactId>
-	<version>0.0.1</version>
+	<version>1.0</version>
 	<name>timeline-tracker</name>
 	<description>Timeline and character tracker for any plot</description>
 	<properties>
@@ -57,6 +57,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<executable>true</executable>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
